--- a/BootStrap/Top_A_One/login.html
+++ b/BootStrap/Top_A_One/login.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <!-- start nav bar -->
-    <nav class="navbar navbar-expand-lg nav_bg">
+    <nav class="navbar navbar-expand-lg nav_bg sticky-lg-top">
         <div class="container-fluid mx-md-4 mx-lg-5">
             <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/logo_1.jpg" alt="" width="100px" height="100px"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+            <button class="navbar-toggler bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -50,7 +50,7 @@
                         <a class="nav-link nav_hover me-4  text-white" href="register.html">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav_hover me-4  text-white active_page" href="login.html">Login</a>
+                        <a class="nav-link nav_hover me-4 active_page" href="login.html">Login</a>
                     </li>
                 </ul>
                 <form class="justify-content-end me-5">
@@ -61,10 +61,11 @@
     </nav>
     <!-- end nav bar -->
 
+    <!-- start register form  -->
     <div class="container mt-5">
         <div class="row p-5  border-0 shadow m-5">
             <div class="d-none d-sm-block col-md-6">
-                <img src="images/login_1.png" class="w-100 img-fluid">
+                <img src="images/login_2.jpg" class="w-100 img-fluid">
             </div>
             <div class="col-12 col-md-6">
                 <div>
@@ -76,8 +77,8 @@
                         </div>
                         <div class="col-12 mb-4">
                             <label for="password" class="form-label">Password</label>
-                            <input id="password-field" type="password" class="form-control  name_form" name="password" value="Password">
-                            <span toggle="#password-field" class="fa-solid fa-eye-slash field-icon togglePassword "></span>
+                            <input id="password-field" type="password" class="form-control  name_form" name="password">
+                            <span toggle="#password-field" class="fa-solid fa-eye-slash togglePassword "></span>
                         </div>
                         <div class="col-12">
                             <p class="text-center text-primary mb-4">Forgot password?</p>
@@ -87,10 +88,10 @@
                             <p class="text-center">Don't have an account?<span class="text-primary">Register</span></p>
                         </div>
                         <div class="col-12 mb-3">
-                            <p class="bg-primary text-white text-center rounded name_form p-2"><i class="fa-brands fa-facebook float-start fs-3" style="color: #ffffff;"></i>Login with Facebook</p>
+                            <p class="bg-primary text-white text-center rounded name_form cursor_pointer p-2"><i class="fa-brands fa-facebook float-start fs-3" style="color: #ffffff;"></i>Login with Facebook</p>
                         </div>
                         <div class="col-12">
-                            <p class="text-center bg-white border rounded p-2"><img src="images/google.png" class="google_logo" alt="">Login with Google</p>
+                            <p class="text-center bg-white border rounded cursor_pointer p-2"><img src="images/google.png" class="google_logo" alt="">Login with Google</p>
                         </div>
                     </div>
                     
@@ -99,6 +100,7 @@
             </div>
         </div>
     </div>
+    <!-- end register form  -->
 
     <!-- start footer -->
     <footer class="container-fluid bg-dark mt-5">
@@ -186,14 +188,14 @@
     <script>
         $(document).ready(function(){
             $('.togglePassword').click(function(){
-
-                $(this).toggleClass("fa-solid fa-eye");
                 var input = $($(this).attr("toggle"));
-                if (input.attr("type") == "password"){
-                    input.attr("type", "text");
-                }else{
-                    input.attr("type", "password");
-                };
+                if (input.attr("type") === "password"){
+                    input.attr("type","text");
+                    $(this).removeClass("fa-eye-slash").addClass("fa-eye");
+                } else {
+                    input.attr("type","password");
+                    $(this).removeClass("fa-eye").addClass("fa-eye-slash");
+                }
             });
         });
     </script>
