--- a/BootStrap/Top_A_One/contact.html
+++ b/BootStrap/Top_A_One/contact.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg nav_bg sticky-lg-top ">
         <div class="container-fluid ms-md-4 ms-lg-5">
             <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/logo_1.jpg" alt="" width="100px" height="100px"></a>
-            <div class="offcanvas offcanvas-start w-50 bg-dark" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
+            <div class="offcanvas offcanvas-start w-auto bg-dark" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
                 <div class="offcanvas-body">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
@@ -137,22 +137,22 @@
                     <img src="images/contact-img-01.jpg" alt="">
                 </div>
                 <div class="col-12 col-lg-6">
-                    <div class="shadow p-5 mb-5 bg-body-tertiary rounded">
+                    <div class="shadow p-2 p-lg-5 mb-5 bg-body-tertiary rounded">
                         <div class="row">
                             <p class="fw-bolder form_head">Get in Touch</p>
-                            <div class="col-6 mb-3">
+                            <div class="col-12 col-md-6 mb-3">
                                 <label for="name" class="pb-2">Your Name <i class="fa-solid fa-asterisk ps-2 contact_fa"></i></label>
                                 <input type="text" placeholder="Your name here" class="form-control name_form">
                             </div>
-                            <div class="col-6  mb-3">
+                            <div class="col-12 col-md-6  mb-3">
                                 <label for="email" class="pb-2">Your Email <i class="fa-solid fa-asterisk ps-2 contact_fa"></i></label>
                                 <input type="email" placeholder="Your email here" class="form-control name_form">
                             </div>
-                            <div class="col-6 mb-3">
+                            <div class="col-12 col-md-6 mb-3">
                                 <label for="course" class="pb-2">Your Course <i class="fa-solid fa-asterisk ps-2 contact_fa"></i></label>
                                 <input type="text" placeholder="Your course here" class="form-control name_form">
                             </div>
-                            <div class="col-6  mb-3">
+                            <div class="col-12 col-md-6  mb-3">
                                 <label for="phoe" class="pb-2">Contact Number <i class="fa-solid fa-asterisk ps-2 contact_fa"></i></label>
                                 <input type="phone" placeholder="Your phone here" class="form-control name_form">
                             </div>
@@ -161,7 +161,7 @@
                                 <textarea name="message" id="" placeholder="Tell us few words" class="form-control message_form"></textarea>
                             </div>
                             <div class="col-6 mt-3">
-                                <button class="btn btn-outline-warning rounded name_form"><i class="fa-regular fa-paper-plane pe-2"></i>Sent Message</button>
+                                <button class="btn btn-outline-warning rounded "><i class="fa-regular fa-paper-plane pe-2"></i>Sent Message</button>
                             </div>
                         </div>
                         
