--- a/BootStrap/Top_A_One/adobe_illustractor.html
+++ b/BootStrap/Top_A_One/adobe_illustractor.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg nav_bg sticky-lg-top ">
         <div class="container-fluid ms-md-4 ms-lg-5">
             <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/logo_1.jpg" alt="" width="100px" height="100px"></a>
-            <div class="offcanvas offcanvas-start w-50 bg-dark" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
+            <div class="offcanvas offcanvas-start w-auto bg-dark" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
                 <div class="offcanvas-body">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
@@ -37,7 +37,7 @@
                               Category
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton">
-                              <li ><a class="dropdown-item text-light" href="computer_basic.html">Computer Basic</a></li>
+                              <li ><a class="dropdown-item text-white" href="computer_basic.html">Computer Basic</a></li>
                               <li><a class="dropdown-item text-white" href="excel_for_office.html">Excel for Office</a></li>
                               <li><a class="dropdown-item text-white" href="business_pagemaker.html">Business Pagemaker</a></li>
                               <li><a class="dropdown-item text-white" href="photoshop_for_business.html">Photoshop for Business</a></li>
@@ -130,7 +130,7 @@
                                 </div>
                                 <p>
                                     <span class="ms-3">350,000 MMK</span>
-                                    <button class="btn btn-outline-warning float-end me-3">Join Course</button>
+                                    <a href="register.html"><button class="btn btn-outline-warning float-end me-3">Join Course</button></a>
                                 </p>
                         </div>
                     </div>
