--- a/BootStrap/Top_A_One/index.html
+++ b/BootStrap/Top_A_One/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg nav_bg sticky-lg-top ">
         <div class="container-fluid ms-md-4 ms-lg-5">
             <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/logo_1.jpg" alt="" width="100px" height="100px"></a>
-            <div class="offcanvas offcanvas-start w-50 bg-dark" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
+            <div class="offcanvas offcanvas-start w-auto bg-dark" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
                 <div class="offcanvas-body">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
@@ -111,7 +111,7 @@
                         </p>
                     </div>
                     <p class="pt-3">It was popularised in the 1960s with <br> the release of Letraset sheets <br> containing.</p>
-                    <p>View More +</p>
+                    <a href="about.html" class="text-decoration-none text-black"><p class="text_hover">View More +</p></a>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
@@ -125,7 +125,7 @@
                         </p>
                     </div>
                     <p class="pt-3">It was popularised in the 1960s with <br> the release of Letraset sheets <br> containing.</p>
-                    <p>View More +</p>
+                    <a href="about.html" class="text-decoration-none text-black"><p class="text_hover">View More +</p></a>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
@@ -139,7 +139,7 @@
                         </p>
                     </div>
                     <p class="pt-3">It was popularised in the 1960s with <br> the release of Letraset sheets <br> containing.</p>
-                    <p>View More +</p>
+                    <a href="about.html" class="text-decoration-none text-black"><p class="text_hover">View More +</p></a>
                 </div>
             </div>
         </div>
