--- a/BootStrap/Top_A_One/login.html
+++ b/BootStrap/Top_A_One/login.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg nav_bg sticky-lg-top ">
         <div class="container-fluid ms-md-4 ms-lg-5">
             <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/logo_1.jpg" alt="" width="100px" height="100px"></a>
-            <div class="offcanvas offcanvas-start w-50 bg-dark" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
+            <div class="offcanvas offcanvas-start w-auto bg-dark" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
                 <div class="offcanvas-body">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
@@ -81,7 +81,7 @@
 
     <!-- start register form  -->
     <div class="container mt-5">
-        <div class="row p-5  border-0 shadow m-5">
+        <div class="row p-2 p-lg-5  border-0 shadow m-2 m-lg-5">
             <div class="d-none d-sm-block col-md-6">
                 <img src="images/login_2.jpg" class="w-100 img-fluid">
             </div>
@@ -103,7 +103,7 @@
                         </div>
                         <button class="btn btn-primary offset-2 col-8  mb-3">Login</button>
                         <div class="col-12">
-                            <p class="text-center">Don't have an account?<span class="text-primary">Register</span></p>
+                            <p class="text-center">Don't have an account?<a href="register.html" class="text-decoration-none"><span class="text-primary">Register</span></p></a>
                         </div>
                         <div class="col-12 mb-3">
                             <p class="bg-primary text-white text-center rounded name_form cursor_pointer p-2"><i class="fa-brands fa-facebook float-start fs-3" style="color: #ffffff;"></i>Login with Facebook</p>
