--- a/BootStrap/Top_A_One/contact.html
+++ b/BootStrap/Top_A_One/contact.html
@@ -104,22 +104,22 @@
         </div>
         <h2 class="text-center fw-bold tm_head mb-5">We're here to help you</h2>
         <div class="row justify-content-center">
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
+            <div class="col-12 col-md-6 col-lg-4 mb-5 mb-lg-0">
+                <div class="shadow p-3 bg-body-tertiary rounded  h-100">
                     <p class="text-center"><i class="fa-regular fa-envelope fa-2x carousel_icon border p-3 me-4"></i></p>
                     <p class="text-center fw-bold fs-4">Email Here</p>
                     <p class="text-center pb-4">aungphyozaw239401@gmail.com</p>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
+            <div class="col-12 col-md-6 col-lg-4 mb-5 mb-lg-0">
+                <div class="shadow p-3 bg-body-tertiary rounded h-100">
                     <p class="text-center"><i class="fa-solid fa-map-location-dot fa-2x carousel_icon border p-3 me-4"></i></p>
                     <p class="text-center fw-bold fs-4">Location Here</p>
                     <p class="text-center">Sein Kone Road, Pathein Township, Ayarwaddy Region</p>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
+            <div class="col-12 col-md-6 col-lg-4 mb-5 mb-lg-0">
+                <div class="shadow p-3 bg-body-tertiary rounded h-100">
                     <p class="text-center"><i class="fa-solid fa-mobile-screen fa-2x carousel_icon border p-3 me-4"></i></p>
                     <p class="text-center fw-bold fs-4">Call Here</p>
                     <p class="text-center pb-4">+95 761 746 819</p>
