--- a/BootStrap/Top_A_One/index.html
+++ b/BootStrap/Top_A_One/index.html
@@ -152,7 +152,7 @@
             <div class="col-12 col-lg-6">
                 <img src="images/about-01.jpg" alt="" class="img-fluid">
             </div>
-            <div class="col-12 col-lg-6  mt-4 mt-xl-0 ">
+            <div class="col-12 col-lg-6 mt-4 mt-xl-0 ">
                 <p class="border border-warning bg-warning bg-opacity-25 rounded p-2 text-center text-warning tm_box">Welcome</p>
                 <p class="fw-bold tm_head">Learn whenever, anyplace, at your own speed.</p>
                 <p class="border_start ps-4 tm_title" >A spot to furnish understudies with sufficient <br> information and abilities in an unpredictable world.</p>
@@ -234,10 +234,10 @@
     <!-- start about us -->
     <div class="container">
         <div class="row">
-            <div class="col-md-12 col-lg-6">
+            <div class="col-md-12 col-lg-6 mt-4 mt-lg-5">
                 <img src="images/about us.jpg" alt="" class="w-100 img-fluid">
             </div>
-            <div class="col-md-12 col-lg-6 shadow bg-body-tertiary rounded  mt-4 mt-xl-0 ">
+            <div class="col-md-12 col-lg-6 shadow bg-body-tertiary rounded  mt-4 mt-lg-5 p-2 p-lg-5">
                 <div>
                     <h1 class="tm_head fw-bold">About Us</h1>
                     <p>There will be opportunities to study courses up to the professional level.</p>
