--- a/BootStrap/Top_A_One/adobe_illustractor.html
+++ b/BootStrap/Top_A_One/adobe_illustractor.html
@@ -59,9 +59,7 @@
                     <li class="nav-item">
                         <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="register.html">Register</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="login.html">Login</a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -119,6 +117,7 @@
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Color Theory & Pattern Design</span></p>
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Packaging & Logo Design</span></p>
                     <p>Computer skills at work refer to the knowledge and ability to use various digital tools and technologies to complete job tasks efficiently and effectively. These skills can include: The ability to use a computer, navigate the internet, and use common software applications such as Microsoft Office.</p>
+                    <a href="register.html"><button class="btn btn-outline-warning me-3">Join Course</button></a>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
