--- a/BootStrap/Top_A_One/excel_for_office.html
+++ b/BootStrap/Top_A_One/excel_for_office.html
@@ -59,9 +59,7 @@
                         <li class="nav-item">
                             <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="register.html">Register</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="login.html">Login</a>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -118,6 +116,7 @@
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Using Internet & Email</span></p>
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Other Computer Knowledge</span></p>
                     <p>Excel is a spreadsheet program from Microsoft and a component of its Office product group for business applications. Microsoft Excel enables users to format, organize and calculate data in a spreadsheet.</p>
+                    <a href="register.html"><button class="btn btn-outline-warning me-3">Join Course</button></a>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
