--- a/BootStrap/Top_A_One/index.html
+++ b/BootStrap/Top_A_One/index.html
@@ -58,9 +58,7 @@
                         <li class="nav-item">
                             <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="register.html">Register</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="login.html">Login</a>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -88,8 +86,8 @@
                     <div class="text-white carousel_text ms-2 ms-md-5 ms-lg-5">
                         <p class="active_page">Enjoy smooth learning</p>
                         <h1 class="fw-bold carousel_head">Learn from Best <br>Online Course</h1>
-                        <a href="contact.html"><button class="btn btn-warning btn-lg text-light"><i class="fa-solid fa-circle-plus me-2"></i>Learn More</button></a>
-                        <a href="course.html"><button class="btn btn-light btn-lg text-warning"><i class="fa-solid fa-circle-plus me-2"></i>Our Courses</button></a>
+                        <a href="contact.html"><button class=" carousel_btn1"><i class="fa-solid fa-circle-plus me-2"></i>Learn More</button></a>
+                        <a href="course.html"><button class=" carousel_btn2"><i class="fa-solid fa-circle-plus me-2"></i>Our Courses</button></a>
                     </div>
                 </div>
             </div>
@@ -108,7 +106,7 @@
                         </div>
                         <p class="d-inline-block">
                             <span class="fw-bold fs-4">Learn Anytime</span>
-                        </p>
+                        </p> 
                     </div>
                     <p class="pt-3">It was popularised in the 1960s with <br> the release of Letraset sheets <br> containing.</p>
                     <a href="about.html" class="text-decoration-none text-black"><p class="text_hover">View More +</p></a>
