--- a/BootStrap/Top_A_One/computer_basic.html
+++ b/BootStrap/Top_A_One/computer_basic.html
@@ -59,9 +59,7 @@
                     <li class="nav-item">
                         <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="register.html">Register</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="login.html">Login</a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -118,6 +116,7 @@
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Using Internet & Email</span></p>
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Other Computer Knowledge</span></p>
                     <p>Computer skills at work refer to the knowledge and ability to use various digital tools and technologies to complete job tasks efficiently and effectively. These skills can include: The ability to use a computer, navigate the internet, and use common software applications such as Microsoft Office.</p>
+                    <a href="register.html"><button class="btn btn-outline-warning me-3">Join Course</button></a>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
@@ -175,7 +174,7 @@
             </div>
         </div>
         <div class="row">
-            <h2 class="text-center fw-bold tm_head mb-4 mt-5">Popular Courses</h2>
+            <h2 class="text-center fw-bold tm_head mb-4 mt-5">Related Courses</h2>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/5.jpg" alt="" class="card-img-top course_img_hover">
