--- a/BootStrap/Top_A_One/software_installation.html
+++ b/BootStrap/Top_A_One/software_installation.html
@@ -71,9 +71,7 @@
                         <li class="nav-item">
                             <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="register.html">Register</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="login.html">Login</a>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -130,6 +128,7 @@
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Window Installation</span></p>
                     <p class=""><i class="fa-solid fa-circle-check" style="color: rgb(255, 196, 102);"></i><span class="ps-2">Other Lesson</span></p>
                     <p>Installation (or setup) of a computer program (including device drivers and plugins), is the act of making the program ready for execution. Installation refers to the particular configuration of software or hardware with a view to making it usable with the computer.</p>
+                    <a href="register.html"><button class="btn btn-outline-warning me-3">Join Course</button></a>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
@@ -187,7 +186,7 @@
             </div>
         </div>
         <div class="row">
-            <h2 class="text-center fw-bold tm_head mb-4 mt-5">Popular Courses</h2>
+            <h2 class="text-center fw-bold tm_head mb-4 mt-5">Related Courses</h2>
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/5.jpg" alt="" class="card-img-top course_img_hover">
