--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- start Nav Bar -->
     <nav class="navbar navbar-expand-md">
         <div class="container-fluid mx-md-4 mx-lg-5">
-            <a href="index.html" class="navbar-brand ms-lg-5 logo"><img src="css_&_bootstrap/image/logo.PNG" alt="" height="60"></a>
+            <a href="index.html" class="navbar-brand ms-lg-5 logo"><img src="css_&_bootstrap/image/logo.PNG" alt="" height="60" id="home"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,13 +21,13 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link nav_hover me-4 " aria-current="page" href="">About</a>
+                            <a class="nav-link nav_hover me-4 " aria-current="page" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav_hover me-4" href="">Project</a>
+                            <a class="nav-link nav_hover me-4" href="#project">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav_hover me-4" href="">Contact</a>
+                            <a class="nav-link nav_hover me-4" href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -41,11 +41,11 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="profile ps-lg-5 ms-lg-5">
-                    <img src="css_&_bootstrap/image/profile 3.jpg" alt="" width="250" class="">
+                    <img src="css_&_bootstrap/image/profile 3.jpg" alt="" width="250">
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="text-center text-md-start pe-lg-5 me-lg-5">
+                <div class="text-center text-md-start pe-lg-5 me-lg-5 mt-3 mt-md-0">
                     <div class="">
                         <p class="fs-4">Hello, It's Me</p>
                         <p><span class="fs-4">I'm </span><span class="fs-2 fw-bold">Aung Htike Lynn</span></p>
@@ -65,39 +65,241 @@
     </div>
     <!-- end Profile Intro -->
 
-    <!-- Start About & Education -->
+    <!-- Start About -->
+    <div class="container mt-5">
+        <div class="row text-center">
+            <div class="col-12 col-lg-6 about_line p-3">
+                <p class="fs-3 fw-bold text-center" id="about">About</p>
+                <p class="text-center">
+                    Hello! I'm Aung Htike Lynn. I studied at Hinthada University from 2016 to 2019. I am interested in Web Development Career and Programming Languages, and started learning at Hein Learn in 2024. With reasonably good communication and presentation skills, I am hardworking, sincere, and dedicated to my work. I possess creative thinking abilities and can effectively cope with work pressure. I am seeking to work in a progressive organization that offers a conducive and challenging work environment for continuous learning and growth. Since beginning my journey, I have been committed to applying and expanding my knowledge and skills in meaningful ways.</p>
+            </div>
+            <div class="col-12 col-lg-6">
+                <p class="fs-3 fw-bold text-center">Basic Information</p>
+                <div class="ps-md-5 pe-md-5 ps-2 pe-2">
+                    <div class="row text-start mt-md-2">
+                        <div class="col-12 col-md-4 fw-bold">
+                            <p>Date of Birth :</p>
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <p>23 May 1999</p>
+                        </div>
+                    </div>
+                    <div class="row text-start mt-md-2">
+                        <div class="col-12 col-md-4 fw-bold">
+                            <p>Email :</p>
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <p>aunghtikelynn23599@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="row text-start mt-md-2">
+                        <div class="col-12 col-md-4 fw-bold">
+                            <p>Phone :</p>
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <p>+959957068157</p>
+                        </div>
+                    </div>
+                    <div class="row text-start mt-md-2">
+                        <div class="col-12 col-md-4 fw-bold">
+                            <p>Nationality :</p>
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <p>Myanmar</p>
+                        </div>
+                    </div>
+                    <div class="row text-start mt-md-2">
+                        <div class="col-12 col-md-4 fw-bold">
+                            <p>Relagion :</p>
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <p>Buddhist</p>
+                        </div>
+                    </div>
+                    <div class="row text-start mt-md-2">
+                        <div class="col-12 col-md-4 fw-bold">
+                            <p>Marital Status :</p>
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <p>Single</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
 
-    <!-- End About & Education -->
+    <!-- End About -->
+
+    <!-- Start Education -->
+    <div class="container mt-5">
+        <p class="text-center fs-3 fw-bold">Education</p>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
+                    <p><i class="fa-solid fa-graduation-cap fs-1" style="color: #1479FB;"></i></p>
+                    <p class="fs-4">Hinthada Universiry</p>
+                    <p>I start my higher education at 2016 by attending. Major is Botanty. I have graduated bechelor degree named B.Sc (Bachelar of Science) from my University in 21 Dec 2019.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
+                    <p><i class="fa-solid fa-book-open-reader fs-1" style="color: #1479FB;"></i></p>
+                    <p class="fs-4">Basic Education</p>
+                    <p>I had attended Grade 1 to 4 at B.E.M.S Nyanpinzay and Grade 5 to 10 at B.E.H.S Zalun. At 2015, I had passed my Grade 10 class at B.E.H.S Zalun.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Education -->
 
     <!-- Start Skill -->
-    <div class="container mt-3">
-        <p class="fs-3 fw-bold text-center">Skill</p>
-        <div class="text-center skill-logo m-sm-0">
-            <img src="css_&_bootstrap/image/HTML5 logo.png" alt="" width="60">
-            <img src="css_&_bootstrap/image/CSS Logo.png" alt="" width="60">
-            <img src="css_&_bootstrap/image/Bootstrap Logo.png" alt="" width="60">
-            <img src="css_&_bootstrap/image/JS Logo.png" alt="" width="60">
-            <img src="css_&_bootstrap/image/JQuery Logo.png" alt="" width="60">
-            <img src="css_&_bootstrap/image/Sql_data_base_with_logo.png" alt="" width="60">
-            <img src="css_&_bootstrap/image/PHP Logo.png" alt="" width="60">
-            <img src="css_&_bootstrap/image/Laravel Logo.png" alt="" width="60">
-            <img src="css_&_bootstrap/image/Git Hub Logo.png" alt="" width="60">
+    <div class="container mt-5">
+        <p class="fs-3 fw-bold text-center">Skills</p>
+        <div class="justify-content-center skill-logo m-sm-0 row">
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/HTML5 logo.png" alt="" width="60" title="HTML">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/CSS Logo.png" alt="" width="60" title="CSS">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/Bootstrap Logo.png" alt="" width="60" title="Bootstrap">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/JS Logo.png" alt="" width="60" title="Java Script">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/JQuery Logo.png" alt="" width="60" title="JQuery">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/Sql_data_base_with_logo.png" alt="" width="60" title="My SQL">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/PHP Logo.png" alt="" width="60" title="PHP">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/Laravel Logo.png" alt="" width="60" title="Laravel">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/Git Hub Logo.png" alt="" width="60" title="Github">
+            </div>
+            <div class="col-4 col-md-2 col-lg-1">
+                <img src="css_&_bootstrap/image/VS Code Logo.png" alt="" width="60" title="VS Code">
+            </div>
         </div>
     </div>
     <!-- End Skill -->
 
+    <!-- Start Project -->
+    <div class="container mt-5">
+        <p class="fs-3 fw-bold text-center" id="project">Projects</p>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card mt-3 border-0 shadow pj-image-hd p-3 ">
+                    <img src="css_&_bootstrap/image/Lynn Shop Laravel.PNG" alt="" class="card-img-top pj-image">
+                    <div class="card-body text-center card_title">
+                        <p class="fs-5 fw-bold">Lynn Shop</p>
+                        <p class="card_text">Backend Development by Laravel 10</p>
+                    </div>
+                    <div>
+                        <a href="" class="button-1 float-start" target="_blank">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card mt-3 border-0 shadow pj-image-hd p-3">
+                    <img src="css_&_bootstrap/image/Lynn Blog Laravel.PNG" alt="" class="card-img-top pj-image">
+                    <div class="card-body text-center card_title">
+                        <p class="fs-5 fw-bold">Lynn Blog</p>
+                        <p class="card_text">Backend Development by Laravel 10</p>
+                    </div>
+                    <div>
+                        <a href="" class="button-1 float-start" target="_blank">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card mt-3 border-0 shadow pj-image-hd p-3">
+                    <img src="css_&_bootstrap/image/Lynn Blog PHP.PNG" alt="" class="card-img-top pj-image">
+                    <div class="card-body text-center card_title">
+                        <p class="fs-5 fw-bold">Lynn Blog</p>
+                        <p class="card_text">Backend Development by PHP</p>
+                    </div>
+                    <div>
+                        <a href="" class="button-1 float-start" target="_blank">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card mt-3 border-0 shadow pj-image-hd p-3">
+                    <img src="css_&_bootstrap/image/E Learning.PNG" alt="" class="card-img-top pj-image">
+                    <div class="card-body text-center card_title">
+                        <p class="fs-5 fw-bold">E Learning</p>
+                        <p class="card_text">Frontend Development by Bootstrap 5</p>
+                    </div>
+                    <div>
+                        <a href="" class="button-1 float-start" target="_blank">Github</a>
+                        <a href=""class="button-2 float-end" target="_blank">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card mt-3 border-0 shadow pj-image-hd p-3">
+                    <img src="css_&_bootstrap/image/Top_A_One.PNG" alt="" class="card-img-top pj-image">
+                    <div class="card-body text-center card_title">
+                        <p class="fs-5 fw-bold">Top A One</p>
+                        <p class="card_text">Frontend Development by Bootstrap 5</p>
+                    </div>
+                    <div>
+                        <a href=""class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://aunghtikelynn.github.io/BootStrap/Top_A_One/index.html" class="button-2 float-end" target="_blank">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card mt-3 border-0 shadow pj-image-hd p-3">
+                    <img src="css_&_bootstrap/image/CSS PJ.PNG" alt="" class="card-img-top pj-image">
+                    <div class="card-body text-center card_title">
+                        <p class="fs-5 fw-bold">Luxury Perfume</p>
+                        <p class="card_text">Frontend Development by CSS</p>
+                    </div>
+                    <div>
+                        <a href=""class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://aunghtikelynn.github.io/CSS/Perfume_Project/index.html" class="button-2 float-end" target="_blank">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card mt-3 border-0 shadow pj-image-hd p-3">
+                    <img src="css_&_bootstrap/image/HTML PJ.PNG" alt="" class="card-img-top pj-image">
+                    <div class="card-body text-center card_title">
+                        <p class="fs-5 fw-bold">Straw Hat Crew</p>
+                        <p class="card_text">Frontend Development by HTML</p>
+                    </div>
+                    <div>
+                        <a href="" class="button-1 float-start" target="_blank">Github</a>
+                        <a href=""class="button-2 float-end" target="_blank">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Project -->
+
     <!-- Start Contact -->
-    <div class="container mt-3">
-        <div class="justify-content-center row ps-5 pe-5">
-            <p class="fs-3 fw-bold text-center">Contact Me</p>
+    <div class="container mt-5">
+        <div class="justify-content-center row ps-lg-5 pe-lg-5">
+            <p class="fs-3 fw-bold text-center" id="contact">Contact Me</p>
             <p class="text-center">I am avaliable for work, when you're ready let me know!</p>
-            <div class="col-md-6 ps-5 pe-5">
+            <div class="col-md-6 ps-lg-5 pe-lg-5">
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
                     <img src="css_&_bootstrap/image/mail logo.png" alt="" width="60">
                     <p class="pt-3">aunghtikelynn23599@gmail.com</p>
                 </div>
             </div>
-            <div class="col-md-6 ps-5 pe-5">
+            <div class="col-md-6 ps-lg-5 pe-lg-5">
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
                     <img src="css_&_bootstrap/image/phone logo.png" alt="" width="60">
                     <p class="pt-3">+959957068157</p>
@@ -106,6 +308,27 @@
         </div>
     </div>
     <!-- End Contact -->
+
+    <!-- Start Footer -->
+    <footer class="container-fluid footer_bg">
+        <div class="text-center p-3">
+            <a href="#home" class="text-decoration-none text-white fs-6 p-1 p-md-2">Home</a>
+            <a href="#about" class="text-decoration-none text-white fs-6 p-1 p-md-2">About</a>
+            <a href="#project" class="text-decoration-none text-white fs-6 p-1 p-md-2">Projects</a>
+            <a href="#contact" class="text-decoration-none text-white fs-6 p-1 p-md-2">Contact</a>
+        </div>
+        <div class="border-top row">
+            <div class="col-6 mt-3 text-light">
+                <p>Design By Aung Htike Lynn &copy; 2024</p>
+            </div>
+            <div class="col-6 mt-3 text-end text-white">
+                <p>
+                    Discover Me <i class="fa-solid fa-heart me-2" style="color: #fc0707;"></i><i class="fa-brands fa-facebook me-2" style="color: #f7f7f7;"></i><i class="fa-brands fa-viber me-2" style="color: #f7f7f7;"></i><i class="fa-brands fa-github me-2" style="color: #f7f7f7;"></i>
+                </p>
+            </div>
+        </div>
+    </footer>
+    <!-- End Footer -->
     <script src="css_&_bootstrap/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
