--- a/BootStrap/Top_A_One/index.html
+++ b/BootStrap/Top_A_One/index.html
@@ -182,7 +182,7 @@
             </div>
         </div>
         <h2 class="text-center fw-bold tm_head mb-5">Popular Courses</h2>
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/5.jpg" alt="" class="card-img-top course_img_hover">
@@ -262,7 +262,7 @@
             </div>
         </div>
         <h2 class="text-center fw-bold tm_head mb-5">Up Comming Courses</h2>
-        <div class="row">
+        <div class="row  justify-content-center">
             <div class="col-12 col-md-6 col-lg-6 col-xl-4">
                 <div class="card course_img_hidden  mt-3 mt-xl-0 border-0 shadow">
                     <img src="images/comming_1.1.jpg" alt="" class="card-img-top course_img_hover">
