--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     <a href="" class="button-1 me-3" target="_blank">Download CV</a>
                     <a href=""class="button-2 " target="_blank">Contact</a>
                     <ul class="nav icon pt-3 m-md-0">
-                        <li class="nav-link"><a href=""><i class="fa-solid fa-phone fs-4"></i></a></li>
-                        <li class="nav-link"><a href=""><i class="fa-solid fa-envelope fs-4"></i></a></li>
-                        <li class="nav-link"><a href=""><i class="fa-brands fa-viber fs-4"></i></a></li>
-                        <li class="nav-link"><a href=""><i class="fa-brands fa-github fs-4"></i></a></li>
+                        <li class="nav-link"><a href="tel:+959957068157" target="_blank"><i class="fa-solid fa-phone fs-4"></i></a></li>
+                        <li class="nav-link"><a href="mailto:aunghtikelynn23599@gmail.com" target="_blank"><i class="fa-solid fa-envelope fs-4"></i></a></li>
+                        <li class="nav-link"><a href="https://www.facebook.com/aunghtike.lynn?mibextid=JRoKGi" target="_blank"><i class="fa-brands fa-facebook fs-4"></i></a></li>
+                        <li class="nav-link"><a href="https://github.com/aunghtikelynn" target="_blank"><i class="fa-brands fa-github fs-4"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -204,7 +204,7 @@
                         <p class="card_text">Backend Development by Laravel 10</p>
                     </div>
                     <div>
-                        <a href="" class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://github.com/aunghtikelynn/LynnShop" class="button-1 float-start" target="_blank">Github</a>
                     </div>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                         <p class="card_text">Backend Development by Laravel 10</p>
                     </div>
                     <div>
-                        <a href="" class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://github.com/aunghtikelynn/LynnBlog" class="button-1 float-start" target="_blank">Github</a>
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@
                         <p class="card_text">Backend Development by PHP</p>
                     </div>
                     <div>
-                        <a href="" class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://github.com/aunghtikelynn/MyBlog" class="button-1 float-start" target="_blank">Github</a>
                     </div>
                 </div>
             </div>
@@ -240,8 +240,8 @@
                         <p class="card_text">Frontend Development by Bootstrap 5</p>
                     </div>
                     <div>
-                        <a href="" class="button-1 float-start" target="_blank">Github</a>
-                        <a href=""class="button-2 float-end" target="_blank">Live Demo</a>
+                        <a href="https://github.com/aunghtikelynn/aunghtikelynn.github.io/tree/main/BootStrap/OnlineLearning" class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://aunghtikelynn.github.io/BootStrap/OnlineLearning/index.html"class="button-2 float-end" target="_blank">Live Demo</a>
                     </div>
                 </div>
             </div>
@@ -253,8 +253,21 @@
                         <p class="card_text">Frontend Development by Bootstrap 5</p>
                     </div>
                     <div>
-                        <a href=""class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://github.com/aunghtikelynn/aunghtikelynn.github.io/tree/main/BootStrap/Top_A_One"class="button-1 float-start" target="_blank">Github</a>
                         <a href="https://aunghtikelynn.github.io/BootStrap/Top_A_One/index.html" class="button-2 float-end" target="_blank">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card mt-3 border-0 shadow pj-image-hd p-3">
+                    <img src="css_&_bootstrap/image/Lynn Fashion PJ.PNG" alt="" class="card-img-top pj-image">
+                    <div class="card-body text-center card_title">
+                        <p class="fs-5 fw-bold">Lynn Fashion</p>
+                        <p class="card_text">Frontend Development by CSS</p>
+                    </div>
+                    <div>
+                        <a href="https://github.com/aunghtikelynn/aunghtikelynn.github.io/tree/main/CSS/CSS_Project"class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://aunghtikelynn.github.io/CSS/CSS_Project/index.html" class="button-2 float-end" target="_blank">Live Demo</a>
                     </div>
                 </div>
             </div>
@@ -266,7 +279,7 @@
                         <p class="card_text">Frontend Development by CSS</p>
                     </div>
                     <div>
-                        <a href=""class="button-1 float-start" target="_blank">Github</a>
+                        <a href="https://github.com/aunghtikelynn/aunghtikelynn.github.io/tree/main/CSS/Perfume_Project"class="button-1 float-start" target="_blank">Github</a>
                         <a href="https://aunghtikelynn.github.io/CSS/Perfume_Project/index.html" class="button-2 float-end" target="_blank">Live Demo</a>
                     </div>
                 </div>
@@ -280,7 +293,7 @@
                     </div>
                     <div>
                         <a href="" class="button-1 float-start" target="_blank">Github</a>
-                        <a href=""class="button-2 float-end" target="_blank">Live Demo</a>
+                        <a href="https://aunghtikelynn.github.io/HTML/Idol_Project/idol_project.html"class="button-2 float-end" target="_blank">Live Demo</a>
                     </div>
                 </div>
             </div>
@@ -323,7 +336,7 @@
             </div>
             <div class="col-6 mt-3 text-end text-white">
                 <p>
-                    Discover Me <i class="fa-solid fa-heart me-2" style="color: #fc0707;"></i><i class="fa-brands fa-facebook me-2" style="color: #f7f7f7;"></i><i class="fa-brands fa-viber me-2" style="color: #f7f7f7;"></i><i class="fa-brands fa-github me-2" style="color: #f7f7f7;"></i>
+                    Discover Me <i class="fa-solid fa-heart me-2" style="color: #fc0707;"></i><a href="https://www.facebook.com/aunghtike.lynn?mibextid=JRoKGi" target="_blank"><i class="fa-brands fa-facebook me-2" style="color: #f7f7f7;"></i></a><a href="https://www.instagram.com/aung_htike_lynn?igsh=amZodnZucWh3cW4z" target="_blank"><i class="fa-brands fa-square-instagram me-2" style="color: #f7f7f7;"></i></a><a href="https://github.com/aunghtikelynn" target="_blank"><i class="fa-brands fa-github me-2" style="color: #f7f7f7;"></i></a>
                 </p>
             </div>
         </div>
